@@ -24,6 +24,7 @@
  * Allow KS and CF names up to 48 characters (CASSANDRA-4157)
  * Add support for CL.TWO and CL.THREE in CQL (CASSANDRA-4156)
  * Fix type in CQL3 ALTER TABLE preventing update (CASSANDRA-4170)
+ * Throw invalid exception from CQL3 on obsolete options (CASSANDRA-4171)
 Merged from 1.0:
  * avoid streaming empty files with bulk loader if sstablewriter errors out
    (CASSANDRA-3946)
